# l18nprint

./: README.md  pyproject.toml
l18nprint/: constants.py  l18nprint.py
