[tool.poetry]
name = "l18nprint"
version = "0.1.0"
description = "Python monkey patch wrapper for making print print correctly."
authors = ["novafacing <rowanbhart@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
pylint = "^2.11.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
